plugins {
    id 'java'
    id 'application'
    // --- Spring Boot Plugins ---
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

// Source of plugins
repositories {
    mavenCentral()
}

dependencies {
    // --- Spring Boot Dependencies ---
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'


    // --- Testing Dependencies ---
    testImplementation 'org.springframework.boot:spring-boot-starter-test'


    // --- Postgresql Dependencies ---
    implementation 'org.postgresql:postgresql:42.7.2'

    // --- Guava for encryption ---
    implementation 'com.google.guava:guava:20.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21) // So we all use Java SDK 21
    }
}

test {
    useJUnitPlatform()
}